I fixed the form styles and footer color in dark mode

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -13,7 +13,7 @@
     box-sizing: border-box;
     width: 100%;
     border-radius: 4px;
-    border: 1px solid white;
+    border: 1px solid black;
     padding: 10px 15px;
     margin-bottom: 10px;
     font-size: 14px;
@@ -32,7 +32,7 @@
     display: block;
     margin-bottom: 13px;
     margin-top: 20px;
-    color: white;
+    color: black;
     font-size: 14px;
     font-weight: 200;
   }
@@ -102,5 +102,9 @@
     text-transform: uppercase;
     padding: 10px 20px;
     border-radius: 4px;
+  }
+
+  .dark-mode .Form label {
+    color: white;
   }
 }
